apps/yt-dlp-webui/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "yt-dlp-webui"
  labels:
    app.kubernetes.io/name: "yt-dlp-webui"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "yt-dlp-webui"
  strategy:
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        app: "yt-dlp-webui"
        app.kubernetes.io/name: "yt-dlp-webui"
        app.kubernetes.io/component: "yt-dlp-webui"
        app.kubernetes.io/part-of: "yt-dlp-webui"
    spec:
      securityContext:
        runAsUser: 44412
        runAsGroup: 44412
        fsGroup: 44412
        runAsNonRoot: true
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - name: "yt-dlp-webui"
          image: "ghcr.io/marcopiovanello/yt-dlp-web-ui:latest@sha256:a8ae96007ee3f306a1079b4edb81a6b87dc685a6e8b822cd52aa0b026cf10ff3"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 44412
            runAsGroup: 44412
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - "ALL"
          resources:
            requests:
              memory: "148Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
          ports:
            - containerPort: 3033
              name: "yt-dlp-webui"
          volumeMounts:
            - name: "storage"
              mountPath: "/storage"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "location"
          whenUnsatisfiable: "ScheduleAnyway"
      volumes:
        - name: "storage"
          emptyDir:
            sizeLimit: "100Mi"
