apps/yt-dlp-webui/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "yt-dlp-webui"
spec:
  ports:
    - port: 80
      targetPort: "yt-dlp-webui"
  selector:
    app.kubernetes.io/name: "yt-dlp-webui"
