apps/yt-dlp-webui/networkpolicy.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "yt-dlp-webui"
spec:
  podSelector: {}
  policyTypes:
    - "Ingress"
  ingress:
    - ports:
        - protocol: "TCP"
          port: "yt-dlp-webui"
      from: []
  egress: []
